[tool.poetry]
name = "dbplot"
version = "0.1.0"
description = "dbplot allows you to make calculations of plots inside databases"
authors = ["Daniel Rodriguez <df.rodriguez143@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
ibis-framework = "^0.14"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
pytest = "^3.4"
sqlalchemy = "^1.2"
notebook = "^5.7"
psycopg2-binary = "^2.7"
